@@ -1,5 +1,11 @@
 2015-07-16  Steven G. Kargl  <kargl@gcc.gnu.org>
 
+	* io.c (check_char_variable): New function.
+	(match_open_element, match_close_element, match_file_element,
+	match_dt_element, match_inquire_element, match_wait_element): Use it.
+
+2015-07-16  Steven G. Kargl  <kargl@gcc.gnu.org>
+
 	PR fortran/66725
 	* io.c (is_char_type): New function to test for BT_CHARACTER
 	(gfc_match_open, gfc_match_close, match_dt_element): Use it.
